--- a/.github/workflows/TestingCliqInformer.yml
+++ b/.github/workflows/TestingCliqInformer.yml
@@ -71,7 +71,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/CliqInformer
+      - uses: prembala1710/CliqInformer@v0.0.2
         with:
           channel-endpoint: ${{ secrets.ENDPOINT }}
           #branch-protection-rule-message: 'Security Update :Security:\n (event) (rule) is (action) by (me) at (repo) under (ref)'
